resources/dock/css/list.css
.AppList {
    -webkit-box-orient: horizontal;
    /* -webkit-box-flex: 1; */
    /* border: solid 2px yellow; */
    /* background-color:red; */
}

.AppItem {
    position:relative;
    margin: 0 3px;
    max-width: 48px;
    height:54px;
    max-height: 60px;
    -webkit-box-flex: 1;
    pointer-events: none;
    text-align:center;
}

.imgWarp{
  /* position:relative; */
  display: -webkit-box;
  -webkit-box-pack:center;
  /* border:black 1px solid; */
}
.indicatorWarp{
  position:relative;
  top: 9px;
  text-align: center;
}

.ReflectImg {
    -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(0,0,0,0.15)));
}

.AppItemImg {
    /* position: absolute; */
    border-radius: 5px;
    max-width: 48px;
    max-height: 48px;
    width: 48px;
    height: 48px;
}

.indicator{
  position:relative;
}

.OpenIndicator {
  bottom:-4px;
}
@-webkit-keyframes Breath {
  0% { opacity: 0; }
  55%{ opacity: 1;}
  100%{opacity: 0;}
}
.OpeningIndicator {
  display: none;
  bottom: 8px;
  -webkit-animation-duration: 1s;
  -webkit-animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: 2;
}

.InsertIndicator {
    /* border: 1px solid rgba(0, 0, 0, 0.5); */
    border-radius: 5px;
    pointer-events: none;
    /* background: rgba(255, 255, 255, 0.3); */
}
.ItemSwapIndicator {
    -webkit-transition: border 0.3s;
    border: 1px solid rgba(0, 0, 0, 0.5);
    padding-top: 2px;
}

.NotifyFlag {
  position: relative;
  right: -2px;
  float: right;
  z-index: 1000;
}

.DigitClockTime {
    /* border: solid black 1; */
    position: relative;
    text-align: center;
    width: 100%;
    top: 18px;
    font-weight: bold;
    font-size:8px;
    color: rgb(255,191,12);
    cursor: default;
    display:-webkit-box;
    -webkit-box-pack:center;
}
.timeNumber{
}

.DigitClockWeek {
    /* border: solid 1px green; */
    position: absolute;
    font-size: 8px;
    width: 100%;
    text-align: center;
    color: white;
    font-weight: bold;
    top: 6%;
}

.pointer{
    position: absolute;
    top: 5px;
    left: 3px;
}

